# DeviceOps

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
common/include/deviceops/db/: device_entity.h  diagnosis_entity.h  event_entity.h  knowledge_entity.h  odb_database.h
common/include/deviceops/mq/: rabbitmq_event_publisher.h
common/src/: odb_database.cc
common/src/mq/: rabbitmq_event_publisher.cc
db/: schema.sql
docs/: 01_requirement.md  02_architecture.md  03_design.md  04_development_guide.md  05_qt_frontend_development_guide.md  06_backend_runbook.md  07_agent_rag_design.md
docs/diagrams/: deviceops_backend_architecture.drawio
proto/: common.proto  device.proto  device_gateway.proto  diagnosis.proto  event.proto  knowledge.proto  log.proto  telemetry.proto
qt_client/: CMakeLists.txt  README.md  config.json
qt_client/src/: app_config.cpp  app_config.h  http_client.cpp  http_client.h  json_utils.cpp  json_utils.h  main.cpp  main_window.cpp  main_window.h
scripts/: check_backend_stack.sh  run_backend_stack.sh  stop_backend_stack.sh
services/device_gateway/: CMakeLists.txt
services/device_gateway/include/device_gateway/: downstream_forwarder.h  gateway_config.h  gateway_rpc_service.h  gateway_server.h  parsed_mqtt_message.h
services/device_gateway/src/: downstream_forwarder.cc  gateway_config.cc  gateway_rpc_service.cc  gateway_server.cc  main.cc
services/device_service/: CMakeLists.txt
services/device_service/include/device_service/: device_repository.h  device_service_impl.h
services/device_service/src/: device_repository.cc  device_service_impl.cc  main.cc
services/diagnosis_service/: CMakeLists.txt
services/diagnosis_service/include/diagnosis_service/: diagnosis_rag_client.h  diagnosis_repository.h  diagnosis_service_impl.h
services/diagnosis_service/src/: diagnosis_rag_client.cc  diagnosis_repository.cc  diagnosis_service_impl.cc  main.cc
services/event_service/: CMakeLists.txt
services/event_service/include/event_service/: event_repository.h  event_service_impl.h
services/event_service/src/: event_repository.cc  event_service_impl.cc  main.cc
services/knowledge_service/: CMakeLists.txt
services/knowledge_service/include/knowledge_service/: knowledge_repository.h  knowledge_service_impl.h  rag_client.h
services/knowledge_service/src/: knowledge_repository.cc  knowledge_service_impl.cc  main.cc  rag_client.cc
services/log_service/: CMakeLists.txt
services/log_service/include/log_service/: log_repository.h  log_service_impl.h
services/log_service/src/: log_repository.cc  log_service_impl.cc  main.cc
services/rag_service/: README.md  server.py
services/telemetry_service/: CMakeLists.txt
services/telemetry_service/include/telemetry_service/: telemetry_repository.h  telemetry_service_impl.h
services/telemetry_service/src/: main.cc  telemetry_repository.cc  telemetry_service_impl.cc
simulator/: CMakeLists.txt
simulator/include/deviceops/simulator/: robot_device_simulator.h
simulator/src/: main.cc  robot_device_simulator.cc
tools/: generate_backend_architecture_drawio.py
tools/rabbitmq_queue_probe/: CMakeLists.txt  main.cc
